GNOME Bugzilla – Bug 665256
possible memleak in camera-monitor: on_camera_added
Last modified: 2011-12-01 09:38:19 UTC
Created attachment 202494 [details] [review] [PATCH] camera-monitor: fix memleak in on_camera_added { - EmpathyCamera *camera = empathy_camera_new (id, filename, product_name); + EmpathyCamera *camera; if (self->priv->cameras == NULL) return; + camera = empathy_camera_new (id, filename, product_name); + g_queue_push_tail (self->priv->cameras, camera);
Merged to master; thanks!