camera-monitor: fix memleak in on_camera_added

https://bugzilla.gnome.org/show_bug.cgi?id=665256